<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:ignore="ExtraText"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            app:cardBackgroundColor="#FAF5F8"
            app:cardElevation="3dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:textSize="24sp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/email" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:text="@string/exit"
            android:onClick="onClickExit"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_news"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickNews"
            android:text="@string/news" />

        <Button
            android:id="@+id/timetable"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClicktimetable"
            android:text="@string/timetable" />

        <Button
            android:id="@+id/btn_profil"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profile" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>